--- a/source/styles/_components.link.scss
+++ b/source/styles/_components.link.scss
@@ -1,7 +1,7 @@
 .c-link {
   position: relative;
   color: $grey-dark;
-  padding-bottom: $spacing-small;
+  padding-bottom: $spacing-smallest;
 
   &:after {
     content: "";
