--- a/source/styles/_settings.global.scss
+++ b/source/styles/_settings.global.scss
@@ -8,7 +8,8 @@ $border-radius: 4px;
 
 $spacing-base: 1rem;
 
-$spacing-small: $spacing-base / 4;
+$spacing-smallest: $spacing-base / 4;
+$spacing-small: $spacing-base / 2;
 $spacing-medium: $spacing-base;
 $spacing-large: $spacing-base * 2;
 $spacing-x-large: $spacing-base * 3;
